force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_ISFDFTF__c.field-meta.xml
<CustomField>
    <fullName>PV_ISFDFTF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PV_ISFDFTF</label>
    <type>Checkbox</type>
</CustomField>