force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_J_1KFREPRE__c.field-meta.xml
<CustomField>
    <fullName>PV_J_1KFREPRE__c</fullName>
    <label>PV_J_1KFREPRE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>