force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_J_1KFTBUS__c.field-meta.xml
<CustomField>
    <fullName>PV_J_1KFTBUS__c</fullName>
    <label>PV_J_1KFTBUS</label>
    <length>16</length>
    <type>Text</type>
</CustomField>