force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KATR10__c.field-meta.xml
<CustomField>
    <fullName>PV_KATR10__c</fullName>
    <label>PV_KATR10</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A02</fullName>
                <label>외식대리점(이천)</label>
            </value>
            <value>
                <fullName>C00</fullName>
                <label>양산센터권역</label>
            </value>
            <value>
                <fullName>P05</fullName>
                <label>구매통합(남동부)</label>
            </value>
            <value>
                <fullName>P07</fullName>
                <label>구매통합(대구)</label>
            </value>
            <value>
                <fullName>P08</fullName>
                <label>구매통합(부산)</label>
            </value>
            <value>
                <fullName>A05</fullName>
                <label>외식대리점(동부)</label>
            </value>
            <value>
                <fullName>B01</fullName>
                <label>장성출하권역(급식)</label>
            </value>
            <value>
                <fullName>B00</fullName>
                <label>장성센터권역</label>
            </value>
            <value>
                <fullName>P04</fullName>
                <label>구매통합(대전)</label>
            </value>
            <value>
                <fullName>P09</fullName>
                <label>구매통합(인천)</label>
            </value>
            <value>
                <fullName>A04</fullName>
                <label>외식대리점(서부)</label>
            </value>
            <value>
                <fullName>P02</fullName>
                <label>구매통합(광주)</label>
            </value>
            <value>
                <fullName>P06</fullName>
                <label>구매통합(동서울)</label>
            </value>
            <value>
                <fullName>P10</fullName>
                <label>구매통합(전주)</label>
            </value>
            <value>
                <fullName>A01</fullName>
                <label>이천센터권역(급식)</label>
            </value>
            <value>
                <fullName>C01</fullName>
                <label>양산센터권역(급식)</label>
            </value>
            <value>
                <fullName>P01</fullName>
                <label>구매통합센터(일산)</label>
            </value>
            <value>
                <fullName>A00</fullName>
                <label>이천센터권역</label>
            </value>
            <value>
                <fullName>P03</fullName>
                <label>구매통합(안양)</label>
            </value>
            <value>
                <fullName>A06</fullName>
                <label>외식대리점(대구)</label>
            </value>
            <value>
                <fullName>E00</fullName>
                <label>수원2센터권역</label>
            </value>
            <value>
                <fullName>A08</fullName>
                <label>외식대리점(수원)</label>
            </value>
            <value>
                <fullName>A09</fullName>
                <label>외식대리점(수원2)</label>
            </value>
            <value>
                <fullName>A07</fullName>
                <label>제주급식센터권역</label>
            </value>
            <value>
                <fullName>E03</fullName>
                <label>수원센터권역(급식)</label>
            </value>
            <value>
                <fullName>D01</fullName>
                <label>대구센터권역(급식)</label>
            </value>
            <value>
                <fullName>D00</fullName>
                <label>대구센터권역</label>
            </value>
            <value>
                <fullName>P11</fullName>
                <label>구매통합(청주)</label>
            </value>
            <value>
                <fullName>E01</fullName>
                <label>수원2센터권역(급식)</label>
            </value>
            <value>
                <fullName>E02</fullName>
                <label>수원센터권역</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>