force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KATR10_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_KATR10_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>출하권역
GroupId : TVKO1</description>
    <label>PV_KATR10_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>TVKO1</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipName>MDMRegRequestCustomer_PV_KATR10</relationshipName>
    <type>Lookup</type>
</CustomField>