force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KATR5__c.field-meta.xml
<CustomField>
    <fullName>PV_KATR5__c</fullName>
    <label>PV_KATR5</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5A</fullName>
                <label>총괄납부사업장</label>
            </value>
            <value>
                <fullName>5B</fullName>
                <label>개별납부사업장</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>