force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KDGRP__c.field-meta.xml
<CustomField>
    <fullName>PV_KDGRP__c</fullName>
    <label>PV_KDGRP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>본점 여신관리</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>개별 여신관리</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>여신관리 안함</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>