force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KEYINFO__c.field-meta.xml
<CustomField>
    <fullName>PV_KEYINFO__c</fullName>
    <label>PV_KEYINFO</label>
    <length>33792</length>
    <type>LongTextArea</type>
</CustomField>