force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KEYYN__c.field-meta.xml
<CustomField>
    <fullName>PV_KEYYN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PV_KEYYN</label>
    <type>Checkbox</type>
</CustomField>