force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KNVKTYPE__c.field-meta.xml
<CustomField>
    <fullName>PV_KNVKTYPE__c</fullName>
    <label>PV_KNVKTYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>FAX</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>유선</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>웹</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>타사</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>이메일</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>