force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KONDA_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_KONDA_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>가격그룹(유효일자 관리 필요)
GroupId : T188</description>
    <label>PV_KONDA_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>T188</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipName>MDMRegRequestCustomer_PV_KONDA</relationshipName>
    <type>Lookup</type>
</CustomField>