force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KULTG__c.field-meta.xml
<CustomField>
    <fullName>PV_KULTG__c</fullName>
    <label>PV_KULTG</label>
    <length>22</length>
    <type>Text</type>
</CustomField>