force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KVGR1__c.field-meta.xml
<CustomField>
    <fullName>PV_KVGR1__c</fullName>
    <label>PV_KVGR1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>627</fullName>
                <label>외식직거래_대형(중식)</label>
            </value>
            <value>
                <fullName>572</fullName>
                <label>신단가그룹 29</label>
            </value>
            <value>
                <fullName>573</fullName>
                <label>신단가그룹 30</label>
            </value>
            <value>
                <fullName>575</fullName>
                <label>신단가그룹 15</label>
            </value>
            <value>
                <fullName>581</fullName>
                <label>신단가그룹 27</label>
            </value>
            <value>
                <fullName>582</fullName>
                <label>신단가그룹 28</label>
            </value>
            <value>
                <fullName>585</fullName>
                <label>신단가그룹 31</label>
            </value>
            <value>
                <fullName>587</fullName>
                <label>신단가그룹 44</label>
            </value>
            <value>
                <fullName>589</fullName>
                <label>신단가그룹1</label>
            </value>
            <value>
                <fullName>593</fullName>
                <label>신단가그룹 49</label>
            </value>
            <value>
                <fullName>595</fullName>
                <label>급식예비 118</label>
            </value>
            <value>
                <fullName>605</fullName>
                <label>외식직거래_기준가</label>
            </value>
            <value>
                <fullName>606</fullName>
                <label>외식직거래_기준 적정판가 매익률 3% UP</label>
            </value>
            <value>
                <fullName>611</fullName>
                <label>외식직거래_매익률 40%</label>
            </value>
            <value>
                <fullName>614</fullName>
                <label>예외공가(외식직거래)</label>
            </value>
            <value>
                <fullName>700</fullName>
                <label>전문점_기준가</label>
            </value>
            <value>
                <fullName>800</fullName>
                <label>프랜차이즈_기준가</label>
            </value>
            <value>
                <fullName>900</fullName>
                <label>투썸_직영</label>
            </value>
            <value>
                <fullName>901</fullName>
                <label>관계사_나인브릿지</label>
            </value>
            <value>
                <fullName>D00</fullName>
                <label>소매_기준가</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>외식대리점_기준가</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>외식대리점_상온</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>외식대리점_저온</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>외식대리점_대리점(실수요)</label>
            </value>
            <value>
                <fullName>106</fullName>
                <label>외식대리점_해피스푼(대리점)</label>
            </value>
            <value>
                <fullName>107</fullName>
                <label>외식대리점_해피스푼(전문점)</label>
            </value>
            <value>
                <fullName>204</fullName>
                <label>외식유통점_기준가(204)</label>
            </value>
            <value>
                <fullName>302</fullName>
                <label>급식예비 130</label>
            </value>
            <value>
                <fullName>303</fullName>
                <label>급식유통점_기준가(303)</label>
            </value>
            <value>
                <fullName>304</fullName>
                <label>급식점_서울</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>