force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KVGR1_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_KVGR1_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>단가그룹(유효일자 관리 필요)
GroupId : TVV1</description>
    <label>PV_KVGR1_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>TVV1</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipName>MDMRegRequestCustomer_PV_KVGR1</relationshipName>
    <type>Lookup</type>
</CustomField>