force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KVGR2__c.field-meta.xml
<CustomField>
    <fullName>PV_KVGR2__c</fullName>
    <label>PV_KVGR2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>자금장려금</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>전략장려금</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>직송장려금</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>자금/전략장려금</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>자금/직송장려금</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>전략/직송장려금</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>자금/전략/직송장려금</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>판매수수료</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>판매수수료/전략장려금</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>