force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KVGR3__c.field-meta.xml
<CustomField>
    <fullName>PV_KVGR3__c</fullName>
    <label>PV_KVGR3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>표준 납품서</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>바코드유형</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>w/ 일별 매출잔고</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>납품공급자 변경(표준)</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>매출잔고형</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>가격제외형</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>급식대리점용</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>푸드넷가공단가유형</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>푸드빌</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>공급자변경가격제외형</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>공급자변경푸드넷가공</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>판매처별</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>복지관 마감용</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>검수일지형</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>공급자변경검수서형</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>