force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KVGR3_BOT__c.field-meta.xml
<CustomField>
    <fullName>PV_KVGR3_BOT__c</fullName>
    <label>PV_KVGR3_BOT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>03</fullName>
                <label>부가정보 제공없음</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>공급자정보 변경형(당사배송)</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>공급자정보 변경형(자차배송)</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>부가정보기본형</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>영업사원정보 제외형</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>