force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KVGR3_BOT_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_KVGR3_BOT_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>납품서 하단유형
GroupId : TVV3_BOT</description>
    <label>PV_KVGR3_BOT_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>TVV3_BOT</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipName>MDMRegRequestCustomer_PV_KVGR3_BOT</relationshipName>
    <type>Lookup</type>
</CustomField>