force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KXOTD__c.field-meta.xml
<CustomField>
    <fullName>PV_KXOTD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PV_KXOTD</label>
    <type>Checkbox</type>
</CustomField>