force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_KXOTDTIME__c.field-meta.xml
<CustomField>
    <fullName>PV_KXOTDTIME__c</fullName>
    <label>PV_KXOTDTIME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>