force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_LAND1_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_LAND1_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>국가키
GroupId : T005</description>
    <label>PV_LAND1_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>T005</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipName>MDMRegRequestCustomer_PV_LAND1</relationshipName>
    <type>Lookup</type>
</CustomField>