force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_LIFNR_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_LIFNR_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>수수료지급처(구매처코드)
GroupId : VENDOR</description>
    <label>PV_LIFNR_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>VENDOR</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipLabel>MDMRegRequestCustomer (PV_LIFNR_lu)</relationshipLabel>
    <relationshipName>MDMRegRequestCustomer_PV_LIFNR</relationshipName>
    <type>Lookup</type>
</CustomField>