force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_LOGISCENTER__c.field-meta.xml
<CustomField>
    <fullName>PV_LOGISCENTER__c</fullName>
    <label>PV_LOGISCENTER</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1000</fullName>
                <label>KX물류센터</label>
            </value>
            <value>
                <fullName>2040</fullName>
                <label>제주FS센터</label>
            </value>
            <value>
                <fullName>2041</fullName>
                <label>제주FC</label>
            </value>
            <value>
                <fullName>2042</fullName>
                <label>제주급식</label>
            </value>
            <value>
                <fullName>2043</fullName>
                <label>제주급식센터(키즈)</label>
            </value>
            <value>
                <fullName>2120</fullName>
                <label>실수요직송센터</label>
            </value>
            <value>
                <fullName>2140</fullName>
                <label>이천)푸드빌센터</label>
            </value>
            <value>
                <fullName>2150</fullName>
                <label>농수가공비축센터</label>
            </value>
            <value>
                <fullName>2170</fullName>
                <label>외부비축창고</label>
            </value>
            <value>
                <fullName>2200</fullName>
                <label>FO 유통</label>
            </value>
            <value>
                <fullName>2230</fullName>
                <label>장성물류센터</label>
            </value>
            <value>
                <fullName>2231</fullName>
                <label>장성물류센터(키즈)</label>
            </value>
            <value>
                <fullName>2240</fullName>
                <label>이천)푸드빌컨세션센터</label>
            </value>
            <value>
                <fullName>2250</fullName>
                <label>양산직수입센터</label>
            </value>
            <value>
                <fullName>2260</fullName>
                <label>양산물류센터</label>
            </value>
            <value>
                <fullName>2261</fullName>
                <label>양산물류센터(키즈)</label>
            </value>
            <value>
                <fullName>2330</fullName>
                <label>장성)아라마크센터</label>
            </value>
            <value>
                <fullName>2340</fullName>
                <label>양산)푸드빌컨세션센터</label>
            </value>
            <value>
                <fullName>2350</fullName>
                <label>대구)아라마크센터</label>
            </value>
            <value>
                <fullName>2360</fullName>
                <label>양산)아라마크센터</label>
            </value>
            <value>
                <fullName>2370</fullName>
                <label>수원2)아라마크센터</label>
            </value>
            <value>
                <fullName>2400</fullName>
                <label>FO중부센터(물류대행)</label>
            </value>
            <value>
                <fullName>2410</fullName>
                <label>FO강남센터(물류대행)</label>
            </value>
            <value>
                <fullName>2420</fullName>
                <label>FO동서울센터(물류대행)</label>
            </value>
            <value>
                <fullName>2430</fullName>
                <label>광주외식센터</label>
            </value>
            <value>
                <fullName>2440</fullName>
                <label>FO남서울센터(물류대행)</label>
            </value>
            <value>
                <fullName>2450</fullName>
                <label>FO대구센터(물류대행)</label>
            </value>
            <value>
                <fullName>2460</fullName>
                <label>FO부산센터(물류대행)</label>
            </value>
            <value>
                <fullName>2470</fullName>
                <label>FO광주센터(물류대행)</label>
            </value>
            <value>
                <fullName>2480</fullName>
                <label>FO울산센터(물류대행)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>