force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_LOGISCENTER_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_LOGISCENTER_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FW 출고센터
GroupId : TVKWZ</description>
    <label>PV_LOGISCENTER_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>TVKWZ</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipLabel>MDMRegRequestCustomer (PV_LOGISCENTER_lu)</relationshipLabel>
    <relationshipName>MDMRegRequestCustomer_PV_LOGISCENTER</relationshipName>
    <type>Lookup</type>
</CustomField>