force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_LRATE__c.field-meta.xml
<CustomField>
    <fullName>PV_LRATE__c</fullName>
    <label>PV_LRATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>