force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_NAME_G__c.field-meta.xml
<CustomField>
    <fullName>PV_NAME_G__c</fullName>
    <label>PV_NAME_G</label>
    <length>100</length>
    <type>Text</type>
</CustomField>